# src/transport/controllers/weather.controller.admin.ts
@@ -1,17 +1,13 @@
-import { Request, Response } from 'express';
+import { Request, Response, Router } from 'express';
 import { logger } from '../../lib/logger';
-import { WeatherService } from '../../services/weather.service';
+import { services } from '../../services';
 
-export class AdminWeatherController {
-    constructor(
-        private readonly weatherService: WeatherService,
-    ) { }
+export const adminWeatherRouter = Router();
 
-    async sync(req: Request, res: Response) {
-        logger.debug('req_sync_weather =>', JSON.stringify(req.body));
-        const result = await this.weatherService.syncWeather(req.body);
+adminWeatherRouter.post('/sync', async (req: Request, res: Response) => {
+    logger.debug('req_sync_weather =>', JSON.stringify(req.body));
+    const result = await services.weather.sync(req.body);
 
-        logger.debug('res_sync_weather =>', result);
-        return res.json({ success: true, result });
-    }
-}
+    logger.debug('res_sync_weather =>', result);
+    return res.json({ success: true, result });
+});
