# swagger/main.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: Swagger Petstore - OpenAPI 3.0
+  title: Swagger - OpenAPI 3.0
   description: Weather service
   license:
     name: Apache 2.0
@@ -16,8 +16,8 @@ paths:
     post:
       tags:
         - Admin countires methods
-      summary: cities
-      description: Getting cities
+      summary: country
+      description: getting country
       requestBody:
         content:
           application/json:
@@ -49,8 +49,8 @@ paths:
     get:
       tags:
         - Admin countires methods
-      summary: Getting cities
-      description: Getting cities
+      summary: getting country
+      description: getting country
       responses:
         '200':
           description: Successful operation
@@ -138,7 +138,7 @@ paths:
       tags:
         - Admin weather methods
       summary: cities
-      description: Getting cities
+      description: getting cities
       requestBody:
         content:
           application/json:
@@ -160,12 +160,216 @@ paths:
                 properties:
                   success:
                     type: boolean
+                  result:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Weather'
         '400':
           description: Invalid ID supplied
         '404':
           description: Pet not found
         '405':
           description: Validation exception
+          
+  /city/list:
+    get:
+      tags:
+        - Public methods
+      summary: cities
+      description: getting all active cities
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  result:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/City'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Pet not found
+        '405':
+          description: Validation exception
+          
+                    
+  /city/{id}/weather:
+    get:
+      tags:
+        - Public methods
+      summary: weather
+      description: getting weather
+      parameters:
+        - name: id
+          in: path
+          description: ID of city to return
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: from
+          in: query
+          description: Tags to filter by
+          required: false
+          explode: true
+          schema:
+            type: string
+            format: date-time
+        - name: to
+          in: query
+          description: Tags to filter by
+          required: false
+          explode: true
+          schema:
+            type: string
+            format: date-time
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  result:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Weather'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Pet not found
+        '405':
+          description: Validation exception
+          
+          
+                              
+  /city/{id}/temperature:
+    get:
+      tags:
+        - Public methods
+      summary: temperature
+      description: getting temperature
+      parameters:
+        - name: id
+          in: path
+          description: ID of city to return
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: from
+          in: query
+          description: date form
+          required: true
+          explode: true
+          schema:
+            type: string
+            format: date-time
+        - name: to
+          in: query
+          description: date to
+          required: true
+          explode: true
+          schema:
+            type: string
+            format: date-time
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  result:
+                    type: object
+                    required: 
+                      - cityId
+                      - temperature
+                    properties:
+                      cityId:
+                        type: integer
+                        format: int64
+                        example: 10
+                      temperature:
+                        type: number
+                        format: float
+                        example: 271.58
+                    
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Pet not found
+        '405':
+          description: Validation exception
+          
+          
+  /city/popular:
+    get:
+      tags:
+        - Public methods
+      summary:  the most popular city
+      description: getting the most popular city
+      parameters:
+        - name: from
+          in: query
+          description: date form
+          required: true
+          explode: true
+          schema:
+            type: string
+            format: date-time
+        - name: to
+          in: query
+          description: date to
+          required: true
+          explode: true
+          schema:
+            type: string
+            format: date-time
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  result:
+                    type: object
+                    required: 
+                      - cityId
+                      - temperature
+                    properties:
+                      cityId:
+                        type: integer
+                        format: int64
+                        example: 10
+                      temperature:
+                        type: number
+                        format: float
+                        example: 271.58
+                    
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Pet not found
+        '405':
+          description: Validation exception
+          
 
 components:
   schemas:
@@ -232,4 +436,49 @@ components:
         updatedAt:
           type: string
           format: date-time
-    
+          
+    Weather: 
+      type: object
+      required: 
+        - id
+        - weatherTag
+        - cityId
+        - date
+        - temp
+        - tempMin
+        - tempMax
+        - createdAt
+        - updatedAt
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+        weatherTag:
+          type: string
+          example: Clouds
+        cityId:
+          type: integer
+          format: int64
+          example: 1
+        date:
+          type: string
+          format: date-time
+        temp:
+          type: number
+          format: float
+          example: 271.53
+        tempMin:
+          type: number
+          format: float
+          example: 271.53
+        tempMax:
+          type: number
+          format: float
+          example: 271.53
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
